Opt: Compatible with different ID type